# Live2D-Python

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  setup.py
cmake/: argparse.cmake  boost.cmake  config.cmake  glfw.cmake
cmake/project/: CubismSdk.cmake  boost.cmake  glew.cmake  python3.cmake  qlib.cmake
examples/sample/: main.cpp
examples/sample_fbo/: CMakeLists.txt  main.cpp
package/: Live2DWidget.py  main.py
scripts/: compile.py  downloader.py  replace.py
src/: Live2DModel.cpp  Live2DModel.h  Live2DRegister.cpp  Live2DRegister.h  Live2DWrapper.cpp  main.cpp
whl/: PyLive2D-1.0-cp312-cp312-win_amd64.whl
whls/: PyLive2D-1.1-cp310-cp310-win32.whl  PyLive2D-1.1-cp312-cp312-win_amd64.whl  pylive2d-1.1-cp310-cp310-linux_x86_64.whl  pylive2d-1.2-cp310-cp310-linux_x86_64.whl  pylive2d-1.3-cp312-cp312-linux_x86_64.whl
